--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ img {
     width: 28.14px;
     height: 23.81px;
     top: 35.72px;
-    right: 32.11px;
+    right: 5.71vw;
 }
 
 
@@ -548,7 +548,7 @@ img {
 
     .page-body {
         max-width: 562px;
-        background-color: var(--background-page);
+        background-color: var(--background);
     }  
 
     .button {
@@ -560,7 +560,7 @@ img {
     }
 
     .main-header {
-        padding: 0 28.86px 20px; 
+        padding: 0 5.135vw 20px; 
         height: 7.8817vh;
         position: sticky;
         left: 0;
@@ -599,7 +599,7 @@ img {
 
     .header-logo img {
         width: 31.75px;
-        height: 28.86;
+        height: 28.86px;
     }
 
     .header-logo img {
@@ -608,10 +608,11 @@ img {
 
     .about {
         height: 90.4vh;
-        padding: 0 28.86px; 
+        padding: 0 5.135vw; 
         background-image: url(../img/mob-iPhone\ 14\ -\ 71crop1102.png);
         background-size: 100vw auto;
         background-repeat: no-repeat;
+        margin-top: 13px;
 }
 
     .about-description {
@@ -663,11 +664,15 @@ img {
         display: none;
     }
 
+    .advantages-offer-wr {
+        gap: 30px;
+    }
+
     .offer {
         height: 18.957vh;
         order: 1;
         margin: 28.86px 0;
-        padding: 0 28.86px 15.87px;
+        padding: 0 5.135vw 15.87px;
         background-image: none;
     }
 
@@ -710,32 +715,33 @@ img {
     .advantages {
         min-height: auto;
         order: 2;
-        margin-bottom: 75px;
+        margin-bottom: 35px;
     }
 
     .advantages-list {
-        /* grid-template-columns: repeat(auto-fit, minmax(calc((100vw - ((28.86px * 2) + 5.135vw)) / 2.01), auto));
-        gap: 5.135vw; */
-        padding: 0 28.86px;
+        padding: 0 5.135vw;
         display: flex;
         flex-wrap: wrap;
-        gap: 4.5vw;
+        gap: 0;
         justify-content: space-between;
         align-items: center;
     }
 
     .advantage-item {
-        width: calc((100vw - ((28.86px * 2) + 5.135vw)) / 2.01);
+        width: 42.17vw;
         height: 28.435vh;
         border-radius: 15px;
-        background-size: contain;
+        background-size: cover;
+        background-position: center;
         border: 1.44px solid var(--basic-tomato);
-        /* margin-bottom: 28.86px; */
+        display: flex;
+        justify-content: center;
+        margin-bottom: 5.135vw;
     }
 
     .advantage-item h2 {
         font-size: 1.888vh;
-        margin: 0 auto 0 3.5vw;
+        margin: 0 auto 0 auto;
         bottom: 5vh;
     }
 
@@ -772,41 +778,46 @@ img {
     } 
 
     .rates {
-        min-height: 785px;
-        background-color: var(--background-page);
+        min-height: 0;
+        background-color: var(--background);
     }
 
     .rates-wr {
-        padding: 0 28.86px;
+        padding: 0 5.135vw;
     }
 
     .rates-wr h1 {
-        font-size: 28.86px;
+        font-size: 2.36vh;
         text-align: center;
     }
 
     .rates-wr p {
-        font-size: 23px;
+        font-size: 1.88vh;
         margin: 14.43px 0;
         opacity: 0.5;
     }
 
     .rates-list {
-        grid-template-columns: repeat(auto-fit, minmax(237px, auto));
-        gap: 28.86px;
-        padding: 0 28.86px;
+        grid-template-columns: repeat(auto-fit, minmax(42.17vw, auto));
+        gap: 5.1vw;
+        padding: 0 5.135vw;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0;
+        justify-content: space-between;
     }
     
     .rates-item {
-        width: 237px;
-        height: 317px;
+        width: 42.17vw;
+        height: 26.02vh;
         border-radius: 15px;
-        border: 1.44px solid var(--basic-tomato)
+        border: 1.44px solid var(--basic-tomato);
+        margin-bottom: 5.135vw;
     }
     
     .rates-item h3 {
-        font-size: 23px;
-        line-height: 28.9px;
+        font-size: 1.88vh;
+        line-height: 2.37vh;
         margin: 10px 0 17px 0;
     }
 
@@ -816,20 +827,23 @@ img {
     }
 
     .rates-item p {
-        top: 85.14px;
-        font-size: 14.43px;
-        line-height: 24.2px;
+        top: 6.99vh;
+        font-size: 1.184vh;
+        line-height: 1.986vh;
         margin: 0;
-        padding: 0 15.87px 0 18.76px;
+        padding: 0 2.82vw 0 3.337vw;
     }
 
     .rates-item button {
         width: 100%;
         position: absolute;
         bottom: 0;
-        height: 43.29;
+        height: 3.554vh;
         font-weight: 400;
-        padding: 12.65px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
     }
 
     .rates-item button::before {
@@ -839,38 +853,48 @@ img {
 
     .rates-item:last-child p {
         margin-left: 0;
-        padding-left: 27.42px;
+        padding-left: 4.87vw;
     }
 
     .checkbox, .button-submit, .phone-number, .footer-ellipse {
         display: none;
     }
 
+    .form {
+        width: 100%;
+    }
+
     .form-container {
-        padding: 30.3px 28.8px 0;
-        min-height: 260px;
+        padding: 0 5.135vw 0;
+        min-height: 150px;
+        justify-content: center;
+        margin: 10px 0 34px;
     }
 
     .form-container h2 {
-        font-size: 23.09px;
+        font-size: 1.8957vh;
         line-height: 130%;
         margin-bottom: 17px;
     } 
 
     .input-wr {
+        align-self: stretch;
+        flex-direction: column;
         gap: 14.32px;
-        margin-bottom: 34px;
-        align-items: stretch;
+        margin-bottom: 0;
     }
 
     .input-wr input {
-        height: 69.2px;
+        width: auto;
+        height: 5.68vh;
         padding: 0 47.6px;
         border-radius: 72px;
     }
 
     .input-wr input::placeholder {
-        font-size: 25.98px;
+        font-size: 2.13vh;
+        padding: 0;
+        margin: 0;
         color: var(--basic-tomato);
     }
 
